# Cragine

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  compile_commands.json  compile_shaders.sh
.cache/clangd/index/: Prova.cpp.1C81B6DF36AF37B2.idx  Prova.h.05B7F4668CCDA9FB.idx  main.cpp.100689442BF94520.idx
Cragine/: CMakeLists.txt
Cragine/include/: App.cpp  Cragine.h  DefaultModules.h  Prova.cpp  Prova.h  Prova2.h  Window.cpp  Window.h
Cragine/include/Commands/: Commands.h
Cragine/include/Core/: App.cpp  App.h
Cragine/include/Ecs/: World.h
Cragine/include/Ecs/Archetypes/: Archetype.cpp  Archetype.h  ArchetypeManager.h
Cragine/include/Ecs/Components/: ComponentManager.h  ComponentSignature.h  QueryHelper.h  QueryParam.h  QueryResult.h
Cragine/include/Ecs/Entities/: Entity.h  EntityManager.h
Cragine/include/Ecs/Systems/: System.h  SystemParam.h  SystemScheduler.h
Cragine/include/Events/: EventManager.h  EventParam.h
Cragine/include/InputModule/: InputManager.h  InputModule.h  KeyCode.h
Cragine/include/Module/: Module.h
Cragine/include/Renderer/: Descriptors.cpp  Descriptors.h  Renderer.cpp  Renderer.h  RendererModule.h  macros.h
Cragine/include/Renderer/BufferHelpers/: Uniform.h  VertexData.h
Cragine/include/Renderer/Device/: Device.cpp  Device.h
Cragine/include/Renderer/Instance/: Instance.cpp  Instance.h
Cragine/include/Renderer/Swapchain/: Swapchain.cpp  Swapchain.h
Cragine/include/Renderer/utils/: Loader.cpp  Loader.h  RendererUtils.cpp  RendererUtils.h  VkTypes.h  defaults.cpp  defaults.h  helpers.cpp  helpers.h  imageOperations.cpp  imageOperations.h  utils.h
Cragine/include/Rendererr/: FrameData.h  RenderContext.cpp  RenderContext.h  RendererModule.h
Cragine/include/Rendererr/Components/: MeshHandle.h  MeshPool.h  ShaderManager.h  UniformData.h
Cragine/include/Rendererr/utils/: Loader.cpp  Loader.h  Uniform.h  VertexData.h
Cragine/include/Resources/: ResourceManager.h  ResourceParam.h
Cragine/include/utils/: Logger.cpp  Logger.h
Engine/: CMakeLists.txt
Engine/include/: Cragine.h  CraginePCH.h  ImGuiBuild.cpp
Engine/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/include/core/: Application.h  EntryPoint.h
Engine/include/input/: Input.h  Keycodes.h  MouseButtonCodes.h
Engine/include/layers/: Layer.h  LayerStack.h
Engine/include/layers/imGui/: ImGuiLayer.h
Engine/include/utils/: ImGuiUtils.h  Logger.h  Macros.h
Engine/include/window/: Window.h
Engine/libs/glad/: CMakeLists.txt
Engine/libs/glad/include/glad/: glad.h
Engine/libs/glad/src/: glad.c
Engine/src/: Cragine.cpp  file.cpp
Engine/src/Cragine/: Application.cpp  Application.h  Core.h  CraginePCH.cpp  CraginePCH.h  EntryPoint.h
Engine/src/Cragine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Cragine/Window/: Window.h
Engine/src/Cragine/Window/Desktop/: DesktopWindow.cpp  DesktopWindow.h
Engine/src/Cragine/utils/: Logger.cpp  Logger.h
Engine/src/core/: Application.cpp
Engine/src/include/: Cragine.h
Engine/src/layers/: Layer.cpp  LayerStack.cpp
Engine/src/layers/imGui/: ImGuiLayer.cpp
Engine/src/utils/: Logger.cpp
Game/: CMakeLists.txt
Game/src/: SampleGame.cpp  main.cpp
Project/: CMakeLists.txt
Project/src/: main.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
assets/: shader.wgsl
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-debug/Cragine/: Makefile  cmake_install.cmake
build-debug/Project/: Makefile  Project  cmake_install.cmake
